--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "vue": "^3.5.27",
+    "vue-i18n": "^11.2.8",
     "vue-router": "^5.0.1"
   },
   "devDependencies": {
